--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -249,3 +249,42 @@ footer {
 .icon {
     color:white;
 }
+
+#portfolio-1 {background:url(../img/portfolio-1.jpg);}
+#portfolio-2 {background:url(../img/portfolio-2.jpg);}
+#portfolio-3 {background:url(../img/portfolio-3.jpg);}
+#portfolio-4 {background:url(../img/portfolio-4.jpg);}
+#portfolio-5 {background:url(../img/portfolio-5.jpg);}
+#portfolio-6 {background:url(../img/portfolio-6.jpg);}
+
+.box {
+    width:300px;
+    height:200px;
+    box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
+    border-bottom:2px solid #fff;
+    border-right:2px solid #fff;
+    margin:5% auto 0 auto; 
+    background-size:cover;
+    border-radius:5px;
+    overflow:hidden;
+}
+
+.overlay {
+    background:rgba(0,0,0,.75);
+    text-align:center;
+    padding:45px 0 66px 0;
+    opacity:0;
+    -webkit-transition: opacity .25s ease;
+    -moz-transition: opacity .25s ease;
+}
+
+.box:hover .overlay {
+    opacity:1;
+}
+
+.plus {
+    font-family:Helvetica;
+    font-weight:500;
+    color:rgba(255,255,255,.85);
+    font-size:25px;
+}
