--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -182,6 +182,20 @@ hr.small {
     margin-bottom: 30px;
 }
 
+/* Callout */
+
+.callout {
+    display: table;
+    width: 100%;
+    height: 400px;
+    color: #fff;
+    background: url(../img/callout.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 /* Portfolio */
 
 .portfolio {
@@ -200,6 +214,28 @@ hr.small {
     opacity: 0.8;
 }
 
+/* Call to Action */
+
+.call-to-action {
+    padding: 50px 0;
+}
+
+.call-to-action .btn {
+    margin: 10px;
+}
+
+/* Map */
+
+.map {
+    height: 500px;
+}
+
+@media(max-width:768px) {
+    .map {
+        height: 75%;
+    }
+}
+
 /* Footer */
 
 footer {
@@ -212,47 +248,4 @@ footer {
 
 .icon {
     color:white;
-}
-
-#portfolio-1 {background:url(../img/portfolio-1.jpg);}
-#portfolio-2 {background:url(../img/portfolio-2.png);}
-#portfolio-3 {background:url(../img/portfolio-3.jpg);}
-#portfolio-4 {background:url(../img/portfolio-4.png);}
-#portfolio-5 {background:url(../img/portfolio-5.jpg);}
-#portfolio-6 {background:url(../img/portfolio-6.png);}
-
-.box {
-    width:300px;
-    height:200px;
-    box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
-    border-bottom:2px solid #fff;
-    border-right:2px solid #fff;
-    margin:5% auto 0 auto; 
-    background-size:cover;
-    border-radius:5px;
-    overflow:hidden;
-}
-
-.overlay {
-    background:rgba(0,0,0,.75);
-    text-align:center;
-    padding:75px 0 66px 0;
-    opacity:0;
-    -webkit-transition: opacity .25s ease;
-    -moz-transition: opacity .25s ease;
-}
-
-.box:hover .overlay {
-    opacity:1;
-}
-
-.plus {
-    font-family:Helvetica;
-    font-weight:500;
-    color:rgba(255,255,255,.85);
-    font-size:20px;
-}
-
-.no-underline {
-    text-decoration: none;
 }
