--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -157,7 +157,7 @@ hr.small {
 .header {
     display: table;
     position: relative;
-    font-family: 'Raleway', serif;
+    /*font-family: 'Raleway', serif;*/
     width: 100%;
     height: 100%;
     background: url(../img/bg.jpg) no-repeat center center scroll;
